css to prevent formbuilder style collapse during onload

--- a/ui/client-react/src/components/builder/builderWrapper.scss
+++ b/ui/client-react/src/components/builder/builderWrapper.scss
@@ -4,6 +4,10 @@
     height: 100%;
     width: 100%;
 
+    .builderWrapperBody {
+        width: 100%;
+    }
+    
     .topNav {
         border: $stroke-width-thin solid  $formBuilder-border-color;
         flex-direction: column;
